Standing up simple React app with Redux

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.movie-card span {
+  display: block;
+}
+.movie-card .title {
+  font-weight: bold;
+}
